# automatic-switch-baselines

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Automatische Switch Konfiguration.md  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  automatic_switch.db  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml
backend/: api.py  database.py  main.py  models.py
backend/app/: config.py  main.py
backend/core/: models.py  policy.py  services.py
backend/core/services/: __init__.py  bootstrap_runner.py  report_service.py  scheduler.py
backend/infra/: database.py  repository.py  serial.py
backend/templates/cisco/: bootstrap.j2
backend/templates/generic/: bootstrap.j2
backend/tests/: test_api.py  test_bootstrap_runner.py  test_csv_import.py  test_hardening.py  test_main.py  test_policy.py  test_preview_api.py  test_reporting.py  test_scheduler.py  test_serial_logic.py  test_vendors.py  test_verification.py
backend/vendors/: base.py  cisco.py  cisco_ios.py  generic.py  interface.py  loader.py
docs/: README.md  runbook.md  vendor_guide.md
engine/: session.py
frontend/: README.md
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: Step1Job.jsx  Step2Import.jsx  Step3Devices.jsx  Step4Preview.jsx  Step5Run.jsx
ops/: .env.example  automatic-switch.service  switch-bootstrapper.service
shared/: utils.py
templates/: cisco_baseline.j2
